// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removes aria-label when instructed not to announce the space name 1`] = `
<SpaceAvatar
  announceSpaceName={false}
  space={
    Object {
      "id": "",
      "name": "",
    }
  }
>
  <EuiAvatar
    aria-hidden={true}
    aria-label=""
    color="#DA8B45"
    data-test-subj="space-avatar-"
    imageUrl=""
    initials=""
    initialsLength={2}
    name=""
    size="m"
    type="space"
  >
    <div
      aria-hidden={true}
      aria-label=""
      className="euiAvatar euiAvatar--m euiAvatar--space"
      data-test-subj="space-avatar-"
      style={
        Object {
          "backgroundColor": "#DA8B45",
          "backgroundImage": "none",
          "color": "#000000",
        }
      }
      title=""
    />
  </EuiAvatar>
</SpaceAvatar>
`;

exports[`renders with a space name entirely made of whitespace 1`] = `
<EuiAvatar
  color="#D36086"
  data-test-subj="space-avatar-"
  imageUrl=""
  initials=""
  initialsLength={2}
  name=""
  size="m"
  type="space"
/>
`;

exports[`renders without crashing 1`] = `
<EuiAvatar
  color="#DA8B45"
  data-test-subj="space-avatar-"
  imageUrl=""
  initials=""
  initialsLength={2}
  name=""
  size="m"
  type="space"
/>
`;
